# round-to

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ceil.rs  floor.rs  lib.rs  round.rs
tests/: tests.rs
