[package]
name = "round-to"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Round floating point to integer."
repository = "https://github.com/lubomirkurcak/round-to/"
keywords = ["round", "rounding", "to", "integer", "round-to"]
categories = ["encoding", "game-development", "hardware-support", "algorithms", "mathematics"]
